--- a/Changes
+++ b/Changes
@@ -1,18 +1,20 @@
+Constraints
+
+- All free variables must be resolvable to the set of known types
+- The set of known types consists of:
+  - All primitive types bundled with loop
+  - All user defined abstract types
+  - All user defined concrete types
+- Two types are convertible if all their members are convertible
+- Two functions are convertible if their signatures match
+  - If An = Bn where n is the number of arguments
+  - If A1t = B1t where A1t is the type of the first argument of A and so on
+  - if At = Bt, i.e. if the return types are convertible
+
 Completed
 ---------
 
-- Parser recognizes single line expressions
-- Inline list/map construction
-- Parsing list comprehension
-- Parsing list ranges and indexing
-- Parsing free method call arg list
-- Parsing type names
-- Parsing require decl
-- Parsing module decl
-- Parse expressions grouped by ()
-- Parse named method calls
-- Parse function decl
-- Parse type annotations for func arguments (optional)
+
 
 To be done
 ----------
@@ -23,8 +25,6 @@ Parsing Classes
 - enumeration type
 - class constants?
 
-- Reducer
-- Compiler/Emitter
 - Type analyzer
 
 Stretch
