--- a/TODO
+++ b/TODO
@@ -12,18 +12,19 @@ x 'where' scoping
 
 x guards for pattern matching methods
 - Interactive interpreter/shell
-- List comprehensions
-- Conditionals (if-then-else, ternaries)
+x List comprehensions
+x Conditionals (if-then-else, ternaries)
 x Calling into Java methods
 - Line/Column error reporting
 - Basic scope verification with symbol table
 - Modules/packaging/import
-- Tail call optimization
+- Closures
 
 
 Stretch
 -------
 
+- Tail call optimization
 - Exception unrolling
 - Basic function inlining
 - enumeration type
