--- a/TODO
+++ b/TODO
@@ -1,30 +1,13 @@
 TODO
 ----
 
-x Parsing Classes
-x class declaration
-x object instantiation
-x 'where' scoping
-x Pattern matching methods
-  x match lists, empty, mixed with literals, regexes
-  x match strings, regexes
-  x match against single literals
-  x match patterns against multiple arguments
-  x match map and object patterns
-
-x Fix List comprehensions parsing in pattern matching methods
-x guards for pattern matching methods
-x List comprehensions
-x Conditionals (if-then-else, ternaries)
-x Calling into Java methods
-x Line/Column error reporting
-x Closures
-x Interactive interpreter/shell
+ASM
+- Pattern matching
+x index into string
 - Basic scope verification with symbol table
 - Modules/packaging/import
+
 - do block
-x Value typing example
-x Where block multiple var assigns
 
 
 Stretch
@@ -32,8 +15,6 @@ Stretch
 
 x Null-safety (is this possible?)
 - Tail call optimization
-x String interpolation
-x Exception unrolling
 - enumeration type
 - immutable types
 - Setting values in objects
@@ -41,6 +22,7 @@ x Exception unrolling
 - Type classes/extension methods (better than interfaces/traits)
 - Pattern matching methods on character streams
 - require as (stuff)
+- index into map
 
 
 Algorithms
