Null-safe method calling

--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@ Stretch
 -------
 
 x "Call as method"
-- Null-safety (is this possible?)
+x Null-safety (is this possible?)
 - Tail call optimization
 - enumeration type
 - immutable types
