--- a/TODO
+++ b/TODO
@@ -5,8 +5,9 @@ ASM
 
 x Modules/packaging/import
   x conflicting module imports
-  - require as (stuff)
+  x require as (stuff)
   x always require prelude
+  - resolve types too
 - Tail call optimization
 - line numbers (for exceptions)
 x try/catch/finally
@@ -17,7 +18,7 @@ x Fix boolean and/or
 Stretch
 -------
 
-- force call as Java with :: scope resolution operator
+x force call as Java with <- scope resolution operator
 - enumeration type
 - Single inheritance
 - process subsystem
