--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ x Modules/packaging/import
   x require as (stuff)
   x always require prelude
   - resolve types too
-- Tail call optimization
+x Tail call optimization (eliminate tail-recursive calls)
 - line numbers (for exceptions)
 x try/catch/finally
 x Fix boolean and/or
