--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ x Modules/packaging/import
   x always require prelude
   - resolve types too
 - Update loop shell
-- Elide line break tokens inside [] and {}
+x Elide line break tokens inside [] and {}
 - Parse expressions directly in body and emit to static initializer
 - Fix doubles!
 
