--- a/TODO
+++ b/TODO
@@ -34,6 +34,24 @@ x Make ! and ? part of ident tokens
   - cron/timer process
 - software transactions with MVCC and failed handlers
 - parse + emit do blocks
+
+greet() ->
+    name: read(),
+    print("Hello, @{name}!")
+  where
+    x: 5
+
+
+save_name() in @names ->
+    name: read(),
+    this.name: name,
+    print("Saved, @{name}!")
+  else
+    this.rollback()
+  where
+    x: 5
+
+
 - one line web server (loop web.server 8080)
 - "ribbon" web framework based on Netty + process subsystem
 
