--- a/TODO
+++ b/TODO
@@ -36,6 +36,7 @@ x Make ! and ? part of ident tokens
 x parse + emit do blocks
 - one line web server (loop web.server 8080)
 - "ribbon" web framework based on Netty + process subsystem
+- Get rid of commons-io dep
 
 
 Algorithms
