--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 TODO
 ----
 
-ASM
-
 - Docs
 - About
 - FAQ
@@ -18,6 +16,21 @@ Stretch
   - call (synchronous sendAndWait)
   - balance processes across threadpools
   - cron/timer process
+
+require channels
+
+do_stuff(msg) =>
+  @ping    : print('pong')
+  *        : @shutdown
+
+main ->
+  start_channel(name    : @pinger,
+                actor   : do_stuff,
+                options : {}),
+  @pinger.send(@ping) for i in [1..10],
+  @pinger.send(-1)
+
+
 - software transactional cells with MVCC and failed handlers
 - one line web server (loop web.server 8080)
 - enumeration type
