--- a/TODO
+++ b/TODO
@@ -36,7 +36,7 @@ main ->
 - enumeration type
 x Get rid of commons-io dep
 - hierarchical modules support
-
+- Add verification error (or implicit imports for java.lang primitive wrapper types)
 
 Algorithms
 ----------
