--- a/TODO
+++ b/TODO
@@ -4,17 +4,19 @@ TODO
 x Fix bug in literal pattern matching
 
 - Docs
-- About
+x About
 - FAQ
-- Mailing list
+x Mailing list
 - Get started page
 - Release a build!
+- add analytics to homepage
+- map looplang.org to docsite
 
-- Fix error printing, indexOOB exception
 x Pass CLI args through to main
 - think thru null-safe stuff
 - resolve functions from imported modules when creating a function-ref closure
 - fix closures in loopshell
+x fix main() issues, it's totally borked
 
 Stretch
 -------
@@ -26,6 +28,7 @@ x process subsystem
   - cron/timer process
 
 - software transactional cells with MVCC and failed handlers
+- Fix error printing, indexOOB exception
 - one line web server (loop web.server 8080)
 - enumeration type
 x Get rid of commons-io dep
