--- a/TODO
+++ b/TODO
@@ -12,11 +12,10 @@ x Mailing list
 - add analytics to homepage
 - map looplang.org to docsite
 
-x Pass CLI args through to main
-- think thru null-safe stuff
 - resolve functions from imported modules when creating a function-ref closure
 - fix closures in loopshell
-x fix main() issues, it's totally borked
+- VerifyError: Illegal local variable number
+
 
 Stretch
 -------
@@ -28,6 +27,7 @@ x process subsystem
   - cron/timer process
 
 - software transactional cells with MVCC and failed handlers
+- reduce function (foldleft with implicit val)
 - Fix error printing, indexOOB exception
 - one line web server (loop web.server 8080)
 - enumeration type
