--- a/TODO
+++ b/TODO
@@ -1,13 +1,13 @@
 TODO
 ----
 
-- Docs
+x Docs
 x About
-- FAQ
+x FAQ
 x Mailing list
-- Get started page
+x Get started page
 - Release a build!
-- add analytics to homepage
+x add analytics to homepage
 - map looplang.org to docsite
 
 - fix closures in loopshell
