Fixed a bug in string pattern destructuring where incorrect substring offset was being computed

--- a/TODO
+++ b/TODO
@@ -13,7 +13,9 @@ x map looplang.org to docsite
 x fix closures in loopshell
 x make closures callable using postfix notation
 x and generally allow one-line closures/funcs(?)
-- fix concurrency problems in channels API
+- fix concurrency errors in channels API test (isolate test JVMs?)
+x fix object pattern rules to use {}
+- fix string pattern or remove it.
 
 Stretch
 -------
