--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ x map looplang.org to docsite
 x fix closures in loopshell
 x make closures callable using postfix notation
 x and generally allow one-line closures/funcs(?)
-- fix concurrency errors in channels API test (isolate test JVMs?)
+- fix flaky concurrency test (isolate test JVMs?)
 x fix object pattern rules to use {}
 x fix string pattern or remove it.
 x fix scoping problem for local string stuff (dont lookup functions over local vars)
