--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Loop emphasizes readable, concise and clear code, with an additional focus on
 performance and concurrency.
 
 To get going quickly, run the "loop" shell script from the loop.tar.gz distribution archive.
-For more details, including documentation, visit http://looplang.org
+For more details, including documentation, visit http://looplang.github.io
 
 
 (c) Copyright 2012. By Dhanji R. Prasanna. Some rights reserved.
